--- a/views/home.ejs
+++ b/views/home.ejs
@@ -43,12 +43,12 @@
 		</div>
 		<div class="ide-content">
 			<form method="POST" action="/submit">
-				<textarea class="ide-code">Enter Your Code</textarea>
-				<select>
+				<textarea name="code" class="ide-code">Enter Your Code</textarea>
+				<select name="lang">
 					<option value="c">C</option>
 					<option value="cpp">C++14</option>
 					<option value="py">Python3</option>
-					<option value="ruby">Ruby</option>
+					<option value="rb">Ruby</option>
 				</select>
 				<button>Run</button>
 			</form>
