Now show Errors (Compilation, Runtime etc)

--- a/views/result.ejs
+++ b/views/result.ejs
@@ -69,6 +69,7 @@
 			<div class="ide-result">
 				<p class="ide-result-content">
 					<%= data.output -%>
+					<%= data.error -%>
 				</p>
 			</div>
 		
