--- a/views/result.ejs
+++ b/views/result.ejs
@@ -53,12 +53,17 @@
 			.ide-res {
 				color: white;
 			}
+			a{
+				text-decoration: none;
+				color: white;
+			}
 		</style>
 	</head>
 	<body>
 		<div class="ide-head">
 			<h1 class="ide-head-content"> Online IDE </h1>
 		</div>
+			<a href="/">Home Page</a>
 			<p class="ide-res">Code</p>
 			<div class="ide-code">
 				<p class="ide-code-content">
